chore: use named placeholders to compose SQL